--- a/README.text
+++ b/README.text
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-This is a recreation of the project done in the tutorial in <a href="https://www.udemy.com/the-web-developer-bootcamp/">The Web Developer Bootcamp</a>
 
-</body>
-</html>
+This is a recreation of the project done in the tutorial in 
+https://www.udemy.com/the-web-developer-bootcamp/
